syntax = "proto3";
//Version 4.2
package grpcinterface;

service BTrDB {
  rpc RawValues(RawValuesParams) returns (stream RawValuesResponse);
  rpc AlignedWindows(AlignedWindowsParams) returns (stream AlignedWindowsResponse);
  rpc Windows(WindowsParams) returns (stream WindowsResponse);
  rpc StreamInfo(StreamInfoParams) returns (StreamInfoResponse);
  rpc SetStreamAnnotations(SetStreamAnnotationsParams) returns (SetStreamAnnotationsResponse);
  rpc Create(CreateParams) returns (CreateResponse);
  rpc ListCollections(ListCollectionsParams) returns (ListCollectionsResponse);
  rpc LookupStreams(LookupStreamsParams) returns (stream LookupStreamsResponse);
  rpc Nearest(NearestParams) returns (NearestResponse);
  rpc Changes(ChangesParams) returns (stream ChangesResponse);
  rpc Insert(InsertParams) returns (InsertResponse);
  rpc Delete(DeleteParams) returns (DeleteResponse);
  rpc Info(InfoParams) returns (InfoResponse);
  rpc FaultInject(FaultInjectParams) returns (FaultInjectResponse);
  rpc Flush(FlushParams) returns (FlushResponse);
  rpc Obliterate(ObliterateParams) returns (ObliterateResponse);
}
message RawValuesParams {
  bytes uuid = 1;
  sfixed64 start = 2;
  sfixed64 end = 3;
  uint64 versionMajor = 4;
}
message RawValuesResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
  repeated RawPoint values = 4;
}
message AlignedWindowsParams {
  bytes uuid = 1;
  sfixed64 start = 2;
  sfixed64 end = 3;
  uint64 versionMajor = 4;
  uint32 pointWidth = 5;
}
message AlignedWindowsResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
  repeated StatPoint values = 4;
}
message WindowsParams {
  bytes uuid = 1;
  sfixed64 start = 2;
  sfixed64 end = 3;
  uint64 versionMajor = 4;
  uint64 width = 5;
  uint32 depth = 6;
}
message WindowsResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
  repeated StatPoint values = 4;
}
message StreamInfoParams {
  bytes uuid = 1;
  bool omitVersion = 2;
  bool omitDescriptor = 3;
}
message StreamInfoResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
  StreamDescriptor descriptor = 4;
}
message StreamDescriptor {
  bytes uuid = 1;
  string collection = 2;
  repeated KeyValue tags = 3;
  repeated KeyValue annotations = 4;
  uint64 annotationVersion = 5;
}
message SetStreamAnnotationsParams {
  bytes uuid = 1;
  uint64 expectedAnnotationVersion = 2;
  repeated KeyOptValue annotations = 3;
}
message SetStreamAnnotationsResponse {
  Status stat = 1;
}
message CreateParams {
  bytes uuid = 1;
  string collection = 2;
  repeated KeyValue tags = 3;
  repeated KeyValue annotations = 4;
}
message CreateResponse {
  Status stat = 1;
}
message ListCollectionsParams {
  string prefix = 1;
  string startWith = 2;
  uint64 limit  = 3;
}
message ListCollectionsResponse {
  Status stat = 1;
  repeated string collections = 2;
}
message LookupStreamsParams {
  string collection = 1;
  bool isCollectionPrefix = 2;
  repeated KeyOptValue tags = 3;
  repeated KeyOptValue annotations = 4;
}
message LookupStreamsResponse {
  Status stat = 1;
  repeated StreamDescriptor results = 2;
}
message NearestParams {
  bytes uuid = 1;
  sfixed64 time = 2;
  uint64 versionMajor = 3;
  bool backward = 4;
}
message NearestResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
  RawPoint value = 4;
}
message ChangesParams {
  bytes uuid = 1;
  uint64 fromMajor = 2;
  uint64 toMajor = 3;
  uint32 resolution = 4;
}
message ChangesResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
  repeated ChangedRange ranges = 4;
}
message InsertParams {
  bytes uuid = 1;
  bool sync = 2;
  repeated RawPoint values = 3;
}
message InsertResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
}
message DeleteParams {
  bytes uuid = 1;
  sfixed64 start = 2;
  sfixed64 end = 3;
}
message DeleteResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
}
message InfoParams {

}
message InfoResponse {
  Status stat = 1;
  Mash mash = 2;
  uint32 majorVersion = 3;
  uint32 minorVersion = 4;
  string build = 5;
  ProxyInfo proxy = 6;
}
message ProxyInfo {
  repeated string proxyEndpoints = 1;
}
message FaultInjectParams {
  uint64 type = 1;
  bytes params = 2;
}
message FaultInjectResponse {
  Status stat = 1;
  bytes rv = 2;
}
message FlushParams {
  bytes uuid = 1;
}
message FlushResponse {
  Status stat = 1;
  uint64 versionMajor = 2;
  uint64 versionMinor = 3;
}
message ObliterateParams {
  bytes uuid = 1;
}
message ObliterateResponse {
  Status stat = 1;
}
message RawPoint {
  sfixed64 time = 1;
  double value = 2;
}
message StatPoint {
  sfixed64 time = 1;
  double min = 2;
  double mean = 3;
  double max = 4;
  fixed64 count = 5;
}
message ChangedRange {
  sfixed64 start = 1;
  sfixed64 end = 2;
}
message Status {
  uint32 code = 1;
  string msg = 2;
  Mash mash = 3;
}
message Mash {
  int64 revision = 1;
  string leader = 2;
  int64 leaderRevision = 3;
  int64 totalWeight = 4;
  bool healthy = 5;
  double unmapped = 6;
  repeated Member members = 7;
}
message Member {
  uint32 hash = 1;
  string nodename = 2;
  bool up = 3;
  bool in = 4;
  bool enabled = 5;
  int64 start = 6;
  int64 end = 7;
  int64 weight = 8;
  double readPreference = 9;
  string httpEndpoints = 10;
  string grpcEndpoints = 11;
}
message KeyOptValue {
  string key = 1;
  OptValue val = 2;
}
message OptValue {
  bytes value = 1;
}
message KeyValue {
  string key = 1;
  bytes value = 2;
}
